[tool.poetry]
name = "etest"
version = "0.1.0"
description = "Interview test"
authors = ["Alessandro Aresta <alessandrostone@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^1.5.3"
numpy = "^1.24.2"
seaborn = "^0.12.2"
scipy = "^1.10.0"
scikit-learn = "^1.2.1"
patsy = "^0.5.3"
xgboost = "^1.7.4"
lightgbm = "^3.3.5"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
